# Gremlins

./: CMakeLists.txt  LICENSE  README
latency/: README
memory/: CMakeLists.txt  README  memory_gremlin.w  memory_utils.c  memory_utils.h
noise/: README
power/: CMakeLists.txt  README  globalPowerBound.w  powerBound.w  powerMeter.w  tapasyasPersonalGremlin.w  terseInfo.w
resilience/: CMakeLists.txt  Makefile  Makefile.config  README  resilienceGremlin.w
resilience/fault_injector/: Makefile  fault_injector.cc  fault_injector.h
resilience/faulttolerant_example/lulesh/: Makefile  README.md  create_patches.sh  lulesh.cc  lulesh.h  lulesh_core_functions  lulesh_core_functions.cc  lulesh_iterations_based  lulesh_iterations_based.cc  lulesh_loop_only  lulesh_loop_only.cc  lulesh_main_only  lulesh_main_only.cc  patch_code.sh  patch_core_functions.txt  patch_iterations_based.txt  patch_loop_only.txt  patch_main_only.txt  run_experiment.py
resilience/src/: Makefile
resilience/src/demo/: run_experiment.py
resilience/src/fault_injector/: Makefile  fault_injector.cc  fault_injector.h
resilience/src/lulesh/: Makefile  create_patches.sh  lulesh.h  lulesh_core_functions.cc  lulesh_main_only.cc  patch_code.sh  patch_core_functions.txt  patch_iterations_based.txt  patch_loop_only.txt  patch_main_only.txt  run_experiment.py
resilience/src/lulesh/old_code/: Makefile.old  lulesh.cc  lulesh_iterations_based.cc  lulesh_loop_only.cc
resilience/src/lulesh/old_code/original_lulesh/: LULESH-1.0.1.tgz
resilience/src/lulesh/old_code/original_lulesh/LULESH-1.0.1/full/: ABSTRACT  Makefile  README
resilience/src/lulesh/old_code/original_lulesh/LULESH-1.0.1/kernels/: kernel1.cc  kernel2.cc  kernel3.cc
resilience/src/lulesh/tmp/: lulesh_core_functions.cc  lulesh_iterations_based.cc  lulesh_loop_only.cc  lulesh_main_only.cc
thermal/: CMakeLists.txt  README  thermalMeter.w
utils/: identity.c  identity.h  patch.sh  utils.c  utils.h
